# mdlm_antibody

./: .gitignore  README.md  preprocess.py  pyproject.toml  train.py
configs/: antibody_config.yaml
notebooks/: 0_mdlm_text.ipynb  antibody.ipynb  intro_antibody.ipynb  mdlm_text.ipynb  structure_viz.ipynb
output/: 0_text_traj_20250722_163323.txt
scripts/: predict_structures.sh  train.sh
src/: diffusion.py
src/MDLM/: dataloader.py  diffusion.py  noise_schedule.py  trainer.py  utils.py
src/MDLM/models/: __init__.py  dit.py
src/MDLM/utils/: tokenizer.py  vocab.py
src/mdlm_antibody.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py
