[project]
name = "mdlm_antibody"
version = "0.1.0"
description = "masked text diffusion model for antibody sequences"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

authors = [
  {name = "Feiyang Huang"}
]

dependencies = [
    "torch==2.6.0",
    "numpy",
    "pandas",
    "einops",
    "scikit-learn",
    "attrs",
    "transformers",
    "hydra-core",
    "wandb",
    "tqdm",    
    "ImmuneBuilder",
    "py3Dmol",
    "notebook",
    "kasearch",
    "huggingface_hub[torch]", 
    "jupyterlab",
]