[project]
name = "mdlm_antibody"
version = "0.1.0"
description = "masked text diffusion model for antibody sequences"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

authors = [
  {name = "Feiyang Huang"}
]

dependencies = [
    "torch==2.6.0",
    "flash-attn==2.7.4.post1",
    "numpy",
    "pandas",
    "einops",
    "scikit-learn",
    "attrs",
    "transformers",
    "huggingface_hub[torch]", 
    "datasets",
    "hydra-core",
    "fsspec",
    "wandb",
    "ImmuneBuilder",
    "py3Dmol",
    "biopython",
    "kasearch",
    "tqdm",    
    "notebook",
    "jupyterlab",
    "matplotlib",
    "seaborn",
]